Добавила CRUD для залов и сессий , аннотаций на них
